fixed alignment of title, added blue color to some text

--- a/client/src/Login/styleStudentLogin.css
+++ b/client/src/Login/styleStudentLogin.css
@@ -143,7 +143,7 @@
 
 .student-login-page .text-wrapper-3 {
     cursor: pointer;
-    color: var(--style);
+    color: #1C49E8;
     font-family: "Inter-Medium", Helvetica;
     font-size: 14px;
     font-weight: 500;
@@ -218,7 +218,7 @@
 }
 
 .student-login-page .text-wrapper-5 {
-    color: var(--style);
+    color: #1C49E8;
     font-family: "Inter-Regular", Helvetica;
     font-size: 16px;
     font-weight: 400;
@@ -274,6 +274,7 @@
     left: 537px;
     letter-spacing: 0;
     line-height: normal;
+    margin-top: -10px;
     position: absolute;
     text-align: center;
     top: 0;
